<resources>
    <string name="app_name">HMS</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="welcome">Welcome</string>
    <string name="weight">Weight</string>
    <string name="sex">Sex</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="home">Home</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="female">Female</string>
    <string name="full_name">Full Name</string>
    <string name="height">Height</string>
    <string name="male">Male</string>
    <string name="register">Register</string>
    <string name="sex_male_female">Sex : Male/Female</string>
    <string name="view">View</string>
</resources>
